# mEDIFIER

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_zh_CN.md  settings.gradle
Android/app/: build.gradle
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/java/priv/wh201906/medifier/: MainActivity.java
Android/app/src/main/res/raw/: cmd.json
Android/app/src/main/res/values/: strings.xml  themes.xml
Android/app/src/main/res/values-zh-rCN/: strings.xml
KnownCommands/: W820NB_Plus.txt
Qt/: .gitignore  CMakeLists.txt  basedevice.cpp  basedevice.h  basedevice.ui  comm.cpp  comm.h  commble.cpp  commrfcomm.cpp  commrfcomm.h  devform.cpp  devform.h  devform.ui  deviceform.cpp  deviceform.h  deviceform.ui  mEDIFIER.pro  mEDIFIER_zh_CN.ts  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  w820nbplus.cpp  w820nbplus.h  w820nbplusform.cpp  w820nbplusform.h  w820nbplusform.ui  winbthelper.h
Qt/android/: AndroidManifest.xml
Qt/android/java/io/github/wh201906/medifier/qt/: MainActivity.java  ProfileProxyHelper.java
Qt/android/java/priv/wh201906/medifier/qt/: MainActivity.java  ProfileProxyHelper.java
Qt/comms/: comm.cpp  comm.h  commble.cpp  commble.h  commrfcomm.cpp  commrfcomm.h  winbthelper.cpp  winbthelper.h
Qt/devices/: basedevice.cpp  basedevice.h  basedevice.ui  deviceinfo.json  devices.qrc  w200btplus.cpp  w200btplus.h  w820nbplus.cpp
app/src/main/res/layout/: activity_main.xml
app/src/main/res/raw/: cmd.json
app/src/main/res/values/: strings.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-zh-rCN/: strings.xml
deploy/aur/: io.github.wh201906.medifier.qt.desktop  io.github.wh201906.medifier.qt.metainfo.xml
doc/KnownCommands/: W820NB_Double_Gold.txt  W820NB_Plus.txt
doc/tutorials/: connect.md  connect_zh_CN.md  switch_host.md  switch_host_zh_CN.md
gradle/wrapper/: gradle-wrapper.properties
